fix: z-index result popup

--- a/frontend/css/chat-screen/chat-screen.scss
+++ b/frontend/css/chat-screen/chat-screen.scss
@@ -6,7 +6,7 @@
   padding: 10px 17px;
   top: 53px;
   left: 0;
-  z-index: 10;
+  z-index: 4;
 }
 
 .chat-screen {
