--- a/frontend/css/quiz-screen/quiz-screen.scss
+++ b/frontend/css/quiz-screen/quiz-screen.scss
@@ -48,7 +48,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.629);
-  z-index: 1;
+  z-index: 5;
   @include _.flex-column;
 }
 
